constraint/vs-validation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sServiceValidation
metadata:
  name: validate-virtualservice-services
spec:
  match:
    kinds:
      - apiGroups: ["networking.istio.io"]
        kinds: ["VirtualService"]
  parameters:
    serviceSelector:
      matchLabels: {}
